--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         <meta name="robots" content="noindex, nofollow">
     </header>
     <body>
-        <img src="images/IMG_0995.JPG" width="30%" alt="banner">
-        <h1>Sajib Kr Das's Portal</h1>
+        <img src="images/IMG_0995.JPG" width="50%" alt class="avatar">
+        <h1>Sajib Kr Das</h1>
+        <h4>Software Engineer</h4>
         <h2>About Me</h2>
-        <p>I am a Backend Software Engineer.</p>
-        <p>I have completed BSc in Elecetronics and Communication Engineering From Khulna University, Bangladesh.</p>
-        <p>Now I am working as a Software Engineer at SYSYSTEM in Japan.</p>
+        <p>A skilled software developer with expertise in using new tools and technical<br> 
+            developments to drive improvements throughout an entire software development lifecycle.<br>
+            Having extensive industry and full life cycle experience in a java based environment,<br>
+            along with exceptional analytical, design and problem-solving capabilities.<br>
+            Excellent communication skills and able to work alongside support team and the java<br>
+            community to define and refine new functionality.
+        </p>
+        
         <h2>Credentials and Portfolio</h2>
-
         <p><a href="resume.html">My Resume</a> | <a href="https://github.com/SajibDas">My GitHub</a></p>
         <h2>Contact</h2>
 
